--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -12,6 +12,7 @@ python = "3.10.*"
 pytest = "^7.3.1"
 mypy = "^1.3.0"
 coverage = "^7.2.6"
+ruff = "^0.0.272"
 
 [build-system]
 requires = ["poetry-core"]
