--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -7,6 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.10.*"
+typer = "^0.9.0"
+pydantic = "<2"
+cookiecutter = "^2.1.1"
+aws-cdk-lib = "^2.80.0"
+boto3 = "^1.26.144"
+diagrams = "^0.23.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
